# cfo-ainews-daily

./: .gitignore  CLAUDE.md  README.md  cfo-ai-daily-spec.md  pyproject.toml
.claude/: settings.json
.claude/agents/: fact-checker.md  news-curator.md
.claude/commands/: add-source.md  dry-run.md  run-daily.md
.claude/rules/: yaml-handling.md
.claude/skills/feedback-learning/: SKILL.md
.claude/skills/rss-fetching/: SKILL.md
.claude/skills/slack-blocks/: SKILL.md
.github/workflows/: daily.yml
data/: feedback.jsonl  last_message_cfo.json  last_message_gridie.json  rss_sources.yaml  sent_history.jsonl  sent_history_cfo.jsonl  sent_history_gridie.jsonl
prompts/: curate.md  curate_gridie.md  fact_check.md  group_titles.md  translate.md
scripts/: build_blocks.py  curate.py  dedupe.py  fact_check.py  fetch_rss.py  fetch_web_search.py  main.py  slack_feedback.py  slack_send.py  state_store.py
tests/: test_curate_schema.py  test_dedupe.py  test_digest_routing.py  test_fetch_rss.py  test_main_e2e.py  test_slack_blocks.py  test_slack_feedback.py  test_slack_send.py  test_state_store.py
tests/fixtures/: curated_sample.json  rss_sample.xml
