[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cfo-ainews-daily"
version = "0.1.0"
description = "Daily Korean digest of AI/CFO/finance-jobs news posted to Slack at KST 07:00."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "hany202507" }]
license = { text = "MIT" }
dependencies = [
    "feedparser>=6.0.11",
    "slack-sdk>=3.27.0",
    "anthropic>=0.40.0",
    "scikit-learn>=1.5.0",
    "pyyaml>=6.0.2",
    "beautifulsoup4>=4.12.3",
    "jsonschema>=4.23.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
]

[tool.setuptools.packages.find]
include = ["scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by black

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --tb=short"
